# Traverse-matrix

./: README.md  pyproject.toml
matrix/: exceptions.py  traverse_matrix.py
tests/: test_matrix2.txt  tests.py
